# job-hubt

./: .env.example  .gitignore  README.md  pyproject.toml
config/: company_tier_keywords.yaml  india_states.yaml  keywords.yaml  mnc_list.yaml  my_skills.yaml  resume_variants.yaml  target_companies.yaml  work_mode_keywords.yaml  x_queries.yaml
docs/superpowers/plans/: 2026-05-26-job-hunt-foundation.md
docs/superpowers/specs/: 2026-05-26-job-hunt-system-design.md
scripts/: backfill_enrichment.py  install_command.sh  run_scrapers.sh  setup_gmail.py
src/job_hunt/: db.py  db_migrate.py  models.py  settings.py
src/job_hunt/dashboard/: app.py  queries.py
src/job_hunt/dashboard/pages/: 2_Applied.py
src/job_hunt/pipeline/: dedupe.py  enrich.py  normalize.py  run.py
src/job_hunt/scrapers/: base.py  careers_pages.py  gmail_inbox.py  hn_hiring.py  wellfound.py  x_search.py
tests/: conftest.py  test_applied_queries.py  test_careers_pages.py  test_dashboard_queries.py  test_dashboard_queries_v2.py  test_db_migrate.py  test_dedupe.py  test_enrich.py  test_enrich_v2.py  test_gmail.py  test_hn_scraper.py  test_models.py  test_normalize.py  test_pipeline_run.py  test_scraper_base.py  test_settings.py  test_wellfound.py  test_x_search.py
tests/fixtures/: hn_hiring_sample.json
