[project]
name = "job-hunt"
version = "0.1.0"
description = "Personal semi-automated job-hunt system"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "streamlit>=1.30",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "rapidfuzz>=3.6",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/job_hunt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
